<resources>
    <string name="app_name">IEEE Training</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forget_password_click_here">Forget password? click here</string>
</resources>
